--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -3,3 +3,11 @@
     background-color: #B30DAD;
     background-image: linear-gradient(135deg, #B30DAD, #D942D1);
 }
+
+.green {
+    background-image: linear-gradient(135deg, #09a77d, #12E3BC);
+}
+
+.blue {
+    background-image: linear-gradient(135deg, #2e15ce, #8B7DFF);
+}
