--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -12,10 +12,10 @@
     background-image: linear-gradient(135deg, #2e15ce, #8B7DFF);
 }
 
-<<<<<<< HEAD
 .skyblue {
     background-image: linear-gradient(135deg, #389AFF, #68B3FF);
-=======
+}
+
 .layer {
     border: 1px solid #09a77d;
 }
@@ -28,6 +28,5 @@
     background-image: url(/Image/bitcoin.jpeg);
     background-size: cover;
     background-position: center;
-    height: 200px; 
->>>>>>> 0ac8e3803447508144ee9dfa6377d72604296207
+    height: 200px;
 }
