--- a/css/output.css
+++ b/css/output.css
@@ -1006,6 +1006,10 @@ video {
   width: 18rem;
 }
 
+.w-\[10\%\] {
+  width: 10%;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -1016,6 +1020,10 @@ video {
 
 .w-\[150px\] {
   width: 150px;
+}
+
+.w-\[18\%\] {
+  width: 18%;
 }
 
 .w-\[20\%\] {
@@ -1652,6 +1660,10 @@ video {
   gap: 120px;
 }
 
+.gap-\[12px\] {
+  gap: 12px;
+}
+
 .gap-\[15px\] {
   gap: 15px;
 }
@@ -1696,20 +1708,16 @@ video {
   gap: 50px;
 }
 
+.gap-\[65px\] {
+  gap: 65px;
+}
+
 .gap-\[70px\] {
   gap: 70px;
 }
 
 .gap-\[8px\] {
   gap: 8px;
-}
-
-.gap-\[12px\] {
-  gap: 12px;
-}
-
-.gap-\[65px\] {
-  gap: 65px;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2207,6 +2215,16 @@ video {
   background-color: rgb(25 30 41 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#212734\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 39 52 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#282a2c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 42 44 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#2B88E7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(43 136 231 / var(--tw-bg-opacity));
@@ -2215,6 +2233,11 @@ video {
 .bg-\[\#53DEBD\] {
   --tw-bg-opacity: 1;
   background-color: rgb(83 222 189 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#7182FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 130 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#75B9FF\] {
@@ -2242,6 +2265,11 @@ video {
   background-color: rgb(217 219 221 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#db6a41\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 106 65 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#fff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2264,15 +2292,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#\] {
-  background-color: #;
-}
-
-.bg-\[\#212734\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(33 39 52 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-b {
@@ -2448,6 +2467,11 @@ video {
   padding-right: 2rem;
 }
 
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
 .px-\[10rem\] {
   padding-left: 10rem;
   padding-right: 10rem;
@@ -2536,6 +2560,11 @@ video {
 .px-\[6rem\] {
   padding-left: 6rem;
   padding-right: 6rem;
+}
+
+.px-\[7rem\] {
+  padding-left: 7rem;
+  padding-right: 7rem;
 }
 
 .px-\[8px\] {
@@ -2638,29 +2667,14 @@ video {
   padding-bottom: 8px;
 }
 
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[rem\] {
-  padding-top: rem;
-  padding-bottom: rem;
-}
-
-.px-\[rem\] {
-  padding-left: rem;
-  padding-right: rem;
-}
-
-.px-\[7rem\] {
-  padding-left: 7rem;
-  padding-right: 7rem;
-}
-
 .py-\[8rem\] {
   padding-top: 8rem;
   padding-bottom: 8rem;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
 }
 
 .pb-\[12px\] {
@@ -2779,6 +2793,10 @@ video {
   font-size: 13px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .text-\[15px\] {
   font-size: 15px;
 }
@@ -2797,6 +2815,10 @@ video {
 
 .text-\[20px\] {
   font-size: 20px;
+}
+
+.text-\[22px\] {
+  font-size: 22px;
 }
 
 .text-\[24px\] {
@@ -2827,6 +2849,10 @@ video {
   font-size: 70px;
 }
 
+.text-\[72px\] {
+  font-size: 72px;
+}
+
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -2840,22 +2866,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[2px\] {
-  font-size: 2px;
-}
-
-.text-\[22px\] {
-  font-size: 22px;
-}
-
-.text-\[75px\] {
-  font-size: 75px;
-}
-
-.text-\[72px\] {
-  font-size: 72px;
 }
 
 .font-bold {
@@ -3033,10 +3043,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
 }
 
 .underline {
