pushing the remainder of previous days work

--- a/css/output.css
+++ b/css/output.css
@@ -982,6 +982,10 @@ video {
   height: 25rem;
 }
 
+.h-\[30\%\] {
+  height: 30%;
+}
+
 .h-\[300px\] {
   height: 300px;
 }
@@ -1026,6 +1030,10 @@ video {
   width: 18rem;
 }
 
+.w-\[10\%\] {
+  width: 10%;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
@@ -1036,6 +1044,10 @@ video {
 
 .w-\[150px\] {
   width: 150px;
+}
+
+.w-\[18\%\] {
+  width: 18%;
 }
 
 .w-\[20\%\] {
@@ -1132,14 +1144,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[10\%\] {
-  width: 10%;
-}
-
-.w-\[18\%\] {
-  width: 18%;
 }
 
 .flex-shrink {
@@ -2261,6 +2265,11 @@ video {
   background-color: rgb(33 39 52 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#282a2c\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 42 44 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#2B88E7\] {
   --tw-bg-opacity: 1;
   background-color: rgb(43 136 231 / var(--tw-bg-opacity));
@@ -2269,6 +2278,11 @@ video {
 .bg-\[\#53DEBD\] {
   --tw-bg-opacity: 1;
   background-color: rgb(83 222 189 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#7182FF\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(113 130 255 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#75B9FF\] {
@@ -2296,6 +2310,11 @@ video {
   background-color: rgb(217 219 221 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#db6a41\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(219 106 65 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#fff\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -2314,21 +2333,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#282a2c\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(40 42 44 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#7182FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(113 130 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#db6a41\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(219 106 65 / var(--tw-bg-opacity));
 }
 
 .bg-\[url\(\'\/Image\/bitcoin\.jpeg\'\)\] {
@@ -2514,6 +2518,11 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .px-\[10rem\] {
@@ -2726,11 +2735,6 @@ video {
   padding-bottom: ;
 }
 
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .pb-\[12px\] {
   padding-bottom: 12px;
 }
@@ -2847,6 +2851,10 @@ video {
   font-size: 13px;
 }
 
+.text-\[14px\] {
+  font-size: 14px;
+}
+
 .text-\[15px\] {
   font-size: 15px;
 }
@@ -2916,10 +2924,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-\[14px\] {
-  font-size: 14px;
 }
 
 .font-bold {
@@ -3667,6 +3671,10 @@ video {
     margin-bottom: 4rem;
   }
 
+  .md\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
   .md\:mt-8 {
     margin-top: 2rem;
   }
@@ -3910,6 +3918,10 @@ video {
   .lg\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:leading-\[50px\] {
+    line-height: 50px;
   }
 
   .lg\:leading-\[86px\] {
