--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -53,6 +53,12 @@
     height: 250px;
 }
 
+/* .res {
+    display: none; transition: max-height 0.3s ease-in-out; max-height: 0; overflow: hidden; 
+} */
+
+/* .res.show { max-height: 200px; } */
+
 .faq.active .res {
     display: block;
     transition: .5s;
