--- a/css/output.css
+++ b/css/output.css
@@ -795,10 +795,6 @@ video {
   margin-bottom: 80px;
 }
 
-.-ml-10 {
-  margin-left: -2.5rem;
-}
-
 .mb-\[17px\] {
   margin-bottom: 17px;
 }
@@ -845,10 +841,6 @@ video {
 
 .mt-\[30px\] {
   margin-top: 30px;
-}
-
-.mt-\[40px\] {
-  margin-top: 40px;
 }
 
 .mt-\[4rem\] {
@@ -958,16 +950,16 @@ video {
   display: none;
 }
 
+.h-24 {
+  height: 6rem;
+}
+
 .h-\[100\%\] {
   height: 100%;
 }
 
 .h-\[100px\] {
   height: 100px;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
 }
 
 .h-\[120vh\] {
@@ -992,6 +984,10 @@ video {
 
 .h-\[320px\] {
   height: 320px;
+}
+
+.h-\[350px\] {
+  height: 350px;
 }
 
 .h-\[600px\] {
@@ -1022,12 +1018,16 @@ video {
   height: 100%;
 }
 
-.w-48 {
-  width: 12rem;
+.w-10 {
+  width: 2.5rem;
 }
 
-.w-72 {
-  width: 18rem;
+.w-24 {
+  width: 6rem;
+}
+
+.w-48 {
+  width: 12rem;
 }
 
 .w-\[10\%\] {
@@ -1124,10 +1124,6 @@ video {
 
 .w-\[90\%\] {
   width: 90%;
-}
-
-.w-\[\] {
-  width: ;
 }
 
 .w-\[this-is\\\\\] {
@@ -1716,10 +1712,6 @@ video {
   gap: 20px;
 }
 
-.gap-\[24px\] {
-  gap: 24px;
-}
-
 .gap-\[250px\] {
   gap: 250px;
 }
@@ -2142,12 +2134,24 @@ video {
   border-bottom-left-radius: 0.25rem;
 }
 
+.rounded-bl-xl {
+  border-bottom-left-radius: 0.75rem;
+}
+
 .rounded-br {
   border-bottom-right-radius: 0.25rem;
 }
 
 .rounded-br-\[100px\] {
   border-bottom-right-radius: 100px;
+}
+
+.rounded-br-lg {
+  border-bottom-right-radius: 0.5rem;
+}
+
+.rounded-br-xl {
+  border-bottom-right-radius: 0.75rem;
 }
 
 .rounded-ee {
@@ -2174,8 +2178,20 @@ video {
   border-top-left-radius: 100px;
 }
 
+.rounded-tl-xl {
+  border-top-left-radius: 0.75rem;
+}
+
 .rounded-tr {
   border-top-right-radius: 0.25rem;
+}
+
+.rounded-tr-lg {
+  border-top-right-radius: 0.5rem;
+}
+
+.rounded-tr-xl {
+  border-top-right-radius: 0.75rem;
 }
 
 .border {
@@ -2285,11 +2301,6 @@ video {
   background-color: rgb(113 130 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#75B9FF\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(117 185 255 / var(--tw-bg-opacity));
-}
-
 .bg-\[\#8A7CFF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(138 124 255 / var(--tw-bg-opacity));
@@ -2323,11 +2334,6 @@ video {
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -2493,6 +2499,10 @@ video {
   padding: 2rem;
 }
 
+.p-\[15px\] {
+  padding: 15px;
+}
+
 .p-\[20px\] {
   padding: 20px;
 }
@@ -2550,29 +2560,14 @@ video {
   padding-right: 18px;
 }
 
-.px-\[1rem\] {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
 .px-\[20px\] {
   padding-left: 20px;
   padding-right: 20px;
 }
 
-.px-\[25px\] {
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
 .px-\[2rem\] {
   padding-left: 2rem;
   padding-right: 2rem;
-}
-
-.px-\[30px\] {
-  padding-left: 30px;
-  padding-right: 30px;
 }
 
 .px-\[3rem\] {
@@ -2730,25 +2725,12 @@ video {
   padding-bottom: 8rem;
 }
 
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
 .pb-\[12px\] {
   padding-bottom: 12px;
 }
 
 .pb-\[25px\] {
   padding-bottom: 25px;
-}
-
-.pb-\[6px\] {
-  padding-bottom: 6px;
-}
-
-.pb-\[8px\] {
-  padding-bottom: 8px;
 }
 
 .pt-\[2rem\] {
@@ -3049,23 +3031,18 @@ video {
   color: rgb(18 227 188 / var(--tw-text-opacity));
 }
 
-.text-\[\#336699\]\/\[\.35\] {
-  color: rgb(51 102 153 / .35);
+.text-\[\#19C897\] {
+  --tw-text-opacity: 1;
+  color: rgb(25 200 151 / var(--tw-text-opacity));
 }
 
-.text-\[\#53DEBD\] {
-  --tw-text-opacity: 1;
-  color: rgb(83 222 189 / var(--tw-text-opacity));
+.text-\[\#336699\]\/\[\.35\] {
+  color: rgb(51 102 153 / .35);
 }
 
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
-}
-
-.text-\[\#8475FC\] {
-  --tw-text-opacity: 1;
-  color: rgb(132 117 252 / var(--tw-text-opacity));
 }
 
 .text-\[\#aaa\] {
@@ -3096,6 +3073,11 @@ video {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+
+.text-gray-500 {
+  --tw-text-opacity: 1;
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -3535,6 +3517,14 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.hover\:rounded-tl-xl:hover {
+  border-top-left-radius: 0.75rem;
+}
+
+.hover\:rounded-tr-xl:hover {
+  border-top-right-radius: 0.75rem;
+}
+
 .hover\:bg-\[\#019C71\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(1 156 113 / var(--tw-bg-opacity));
@@ -3577,16 +3567,16 @@ video {
     margin-bottom: 60px;
   }
 
-  .sm\:mt-\[20px\] {
-    margin-top: 20px;
-  }
-
   .sm\:h-\[50vh\] {
     height: 50vh;
   }
 
   .sm\:w-\[100\%\] {
     width: 100%;
+  }
+
+  .sm\:w-\[60\%\] {
+    width: 60%;
   }
 
   .sm\:w-\[70\%\] {
@@ -3687,16 +3677,16 @@ video {
     height: 160vh;
   }
 
-  .md\:h-\[50rem\] {
-    height: 50rem;
+  .md\:h-\[50vh\] {
+    height: 50vh;
   }
 
   .md\:h-\[65vh\] {
     height: 65vh;
   }
 
-  .md\:w-\[48rem\] {
-    width: 48rem;
+  .md\:w-\[60\%\] {
+    width: 60%;
   }
 
   .md\:w-\[70\%\] {
@@ -3763,10 +3753,6 @@ video {
     padding-bottom: 20px;
   }
 
-  .md\:pb-\[80px\] {
-    padding-bottom: 80px;
-  }
-
   .md\:text-center {
     text-align: center;
   }
@@ -3819,6 +3805,10 @@ video {
     display: flex;
   }
 
+  .lg\:h-\[50vh\] {
+    height: 50vh;
+  }
+
   .lg\:h-\[60vh\] {
     height: 60vh;
   }
@@ -3831,6 +3821,10 @@ video {
     height: 90vh;
   }
 
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
   .lg\:w-\[50\%\] {
     width: 50%;
   }
@@ -3841,6 +3835,10 @@ video {
 
   .lg\:w-\[70\%\] {
     width: 70%;
+  }
+
+  .lg\:w-\[75\%\] {
+    width: 75%;
   }
 
   .lg\:w-\[76\%\] {
