--- a/css/homeStyle.css
+++ b/css/homeStyle.css
@@ -92,3 +92,22 @@
     border-top-left-radius: 12px;
     border-top-right-radius: px;
 }
+
+/* .grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 1rem;
+}
+
+.grid-item {
+    background-color: #f3f4f6;
+    border: 1px solid #cbd5e0;
+    padding: 1rem;
+    text-align: center;
+    align-items: center;
+} */
+
+/* .shadow-custom {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+} */
