--- a/css/output.css
+++ b/css/output.css
@@ -765,6 +765,11 @@ video {
   margin-bottom: 120px;
 }
 
+.my-\[150px\] {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
 .my-\[15px\] {
   margin-top: 15px;
   margin-bottom: 15px;
@@ -780,9 +785,19 @@ video {
   margin-bottom: 20px;
 }
 
+.my-\[40px\] {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
 .my-\[50px\] {
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+.my-\[60px\] {
+  margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .my-\[70px\] {
@@ -793,6 +808,16 @@ video {
 .my-\[80px\] {
   margin-top: 80px;
   margin-bottom: 80px;
+}
+
+.my-\[90px\] {
+  margin-top: 90px;
+  margin-bottom: 90px;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mb-\[17px\] {
@@ -845,6 +870,10 @@ video {
 
 .mt-\[20px\] {
   margin-top: 20px;
+}
+
+.mt-\[25px\] {
+  margin-top: 25px;
 }
 
 .mt-\[30px\] {
@@ -974,6 +1003,10 @@ video {
   height: 120vh;
 }
 
+.h-\[150px\] {
+  height: 150px;
+}
+
 .h-\[200px\] {
   height: 200px;
 }
@@ -1030,24 +1063,24 @@ video {
   height: 100%;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-\[70\] {
-  height: 70;
-}
-
-.h-\[70px\] {
-  height: 70px;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
+.w-16 {
+  width: 4rem;
+}
+
+.w-20 {
+  width: 5rem;
+}
+
 .w-24 {
   width: 6rem;
+}
+
+.w-28 {
+  width: 7rem;
 }
 
 .w-48 {
@@ -1062,8 +1095,16 @@ video {
   width: 100%;
 }
 
+.w-\[120\%\] {
+  width: 120%;
+}
+
 .w-\[130\%\] {
   width: 130%;
+}
+
+.w-\[140\%\] {
+  width: 140%;
 }
 
 .w-\[150px\] {
@@ -1098,6 +1139,10 @@ video {
   width: 40rem;
 }
 
+.w-\[42\%\] {
+  width: 42%;
+}
+
 .w-\[43\%\] {
   width: 43%;
 }
@@ -1122,6 +1167,10 @@ video {
   width: 55%;
 }
 
+.w-\[58\%\] {
+  width: 58%;
+}
+
 .w-\[60\%\] {
   width: 60%;
 }
@@ -1132,6 +1181,10 @@ video {
 
 .w-\[70\%\] {
   width: 70%;
+}
+
+.w-\[73\%\] {
+  width: 73%;
 }
 
 .w-\[75\%\] {
@@ -1172,26 +1225,6 @@ video {
 
 .w-full {
   width: 100%;
-}
-
-.w-\[150\%\] {
-  width: 150%;
-}
-
-.w-\[120\%\] {
-  width: 120%;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-\[140\%\] {
-  width: 140%;
 }
 
 .flex-shrink {
@@ -1532,6 +1565,22 @@ video {
   grid-auto-flow: column dense;
 }
 
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-4 {
+  grid-template-columns: repeat(4, minmax(0, 1fr));
+}
+
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+}
+
+.grid-rows-2 {
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
 .flex-row {
   flex-direction: row;
 }
@@ -1724,6 +1773,10 @@ video {
   gap: 2.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
 .gap-6 {
   gap: 1.5rem;
 }
@@ -1754,6 +1807,10 @@ video {
 
 .gap-\[15px\] {
   gap: 15px;
+}
+
+.gap-\[180px\] {
+  gap: 180px;
 }
 
 .gap-\[200px\] {
@@ -2276,6 +2333,10 @@ video {
   border-right-width: 1px;
 }
 
+.border-r-2 {
+  border-right-width: 2px;
+}
+
 .border-s {
   border-inline-start-width: 1px;
 }
@@ -2311,6 +2372,11 @@ video {
 .border-black {
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
 .bg-\[\#01C38D\] {
@@ -2386,6 +2452,16 @@ video {
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-green-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
+}
+
+.bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -2547,6 +2623,14 @@ video {
   padding: 3rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-4 {
+  padding: 1rem;
+}
+
 .p-8 {
   padding: 2rem;
 }
@@ -2570,6 +2654,16 @@ video {
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
+}
+
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .px-6 {
@@ -2722,6 +2816,11 @@ video {
   padding-bottom: 20px;
 }
 
+.py-\[25px\] {
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+
 .py-\[2px\] {
   padding-top: 2px;
   padding-bottom: 2px;
@@ -2782,13 +2881,12 @@ video {
   padding-bottom: 8rem;
 }
 
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
-}
-
 .pb-\[12px\] {
   padding-bottom: 12px;
+}
+
+.pb-\[15px\] {
+  padding-bottom: 15px;
 }
 
 .pb-\[25px\] {
@@ -3148,6 +3246,21 @@ video {
 .text-gray-500 {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.text-green-600 {
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.text-teal-500 {
+  --tw-text-opacity: 1;
+  color: rgb(20 184 166 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -3595,13 +3708,48 @@ video {
   border-top-right-radius: 0.75rem;
 }
 
+.hover\:border:hover {
+  border-width: 1px;
+}
+
+.hover\:border-b:hover {
+  border-bottom-width: 1px;
+}
+
+.hover\:border-b-2:hover {
+  border-bottom-width: 2px;
+}
+
+.hover\:border-\[\]:hover {
+  border-color: ;
+}
+
+.hover\:border-\[\#01C38D\]:hover {
+  --tw-border-opacity: 1;
+  border-color: rgb(1 195 141 / var(--tw-border-opacity));
+}
+
 .hover\:bg-\[\#019C71\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(1 156 113 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#CCF3E8\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(204 243 232 / var(--tw-bg-opacity));
+}
+
 .hover\:font-bold:hover {
   font-weight: 700;
+}
+
+.hover\:text-\[\]:hover {
+  color: ;
+}
+
+.hover\:text-\[\#01C38D\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(1 195 141 / var(--tw-text-opacity));
 }
 
 .before\:hover\:text-center:hover::before {
@@ -3787,6 +3935,10 @@ video {
     align-items: center;
   }
 
+  .md\:gap-10 {
+    gap: 2.5rem;
+  }
+
   .md\:gap-4 {
     gap: 1rem;
   }
@@ -3948,6 +4100,16 @@ video {
   .lg\:px-32 {
     padding-left: 8rem;
     padding-right: 8rem;
+  }
+
+  .lg\:px-6 {
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
+
+  .lg\:py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .lg\:py-3 {
