--- a/css/output.css
+++ b/css/output.css
@@ -775,11 +775,6 @@ video {
   margin-bottom: 15px;
 }
 
-.my-\[200px\] {
-  margin-top: 200px;
-  margin-bottom: 200px;
-}
-
 .my-\[20px\] {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -823,6 +818,11 @@ video {
 .my-auto {
   margin-top: auto;
   margin-bottom: auto;
+}
+
+.my-\[\] {
+  margin-top: ;
+  margin-bottom: ;
 }
 
 .mb-\[20px\] {
@@ -1044,16 +1044,16 @@ video {
   height: 400px;
 }
 
+.h-\[47rem\] {
+  height: 47rem;
+}
+
 .h-\[600px\] {
   height: 600px;
 }
 
-.h-\[700px\] {
-  height: 700px;
-}
-
-.h-\[70vh\] {
-  height: 70vh;
+.h-\[720px\] {
+  height: 720px;
 }
 
 .h-\[80\%\] {
@@ -1064,6 +1064,10 @@ video {
   height: 85%;
 }
 
+.h-\[90vh\] {
+  height: 90vh;
+}
+
 .h-auto {
   height: auto;
 }
@@ -1072,8 +1076,32 @@ video {
   height: 100%;
 }
 
+.h-\[\] {
+  height: ;
+}
+
+.h-\[4\] {
+  height: 4;
+}
+
+.h-\[45vh\] {
+  height: 45vh;
+}
+
+.h-\[60vh\] {
+  height: 60vh;
+}
+
+.h-\[70vh\] {
+  height: 70vh;
+}
+
 .w-10 {
   width: 2.5rem;
+}
+
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-16 {
@@ -1094,6 +1122,10 @@ video {
 
 .w-48 {
   width: 12rem;
+}
+
+.w-8 {
+  width: 2rem;
 }
 
 .w-\[10\%\] {
@@ -1154,6 +1186,10 @@ video {
 
 .w-\[45\%\] {
   width: 45%;
+}
+
+.w-\[5\%\] {
+  width: 5%;
 }
 
 .w-\[50\%\] {
@@ -1586,6 +1622,10 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .grid-rows-1 {
   grid-template-rows: repeat(1, minmax(0, 1fr));
 }
@@ -1786,6 +1826,10 @@ video {
   gap: 2.75rem;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
@@ -1866,20 +1910,16 @@ video {
   gap: 50px;
 }
 
+.gap-\[60px\] {
+  gap: 60px;
+}
+
 .gap-\[65px\] {
   gap: 65px;
 }
 
 .gap-\[8px\] {
   gap: 8px;
-}
-
-.gap-\[\] {
-  gap: ;
-}
-
-.gap-\[mm\] {
-  gap: mm;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2408,6 +2448,11 @@ video {
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
 
+.border-white {
+  --tw-border-opacity: 1;
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
+}
+
 .bg-\[\#01C38D\] {
   --tw-bg-opacity: 1;
   background-color: rgb(1 195 141 / var(--tw-bg-opacity));
@@ -2493,13 +2538,13 @@ video {
   background-color: rgb(220 38 38 / var(--tw-bg-opacity));
 }
 
+.bg-transparent {
+  background-color: transparent;
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[url\(\'\/Image\/bitcoin\.jpeg\'\)\] {
-  background-image: url('/Image/bitcoin.jpeg');
 }
 
 .bg-gradient-to-b {
@@ -2672,10 +2717,6 @@ video {
   padding: 30px;
 }
 
-.p-\[50px\] {
-  padding: 50px;
-}
-
 .px-10 {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
@@ -2801,6 +2842,11 @@ video {
   padding-right: 8px;
 }
 
+.py-1 {
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -2819,6 +2865,11 @@ video {
 .py-\[10px\] {
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.py-\[10rem\] {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
 }
 
 .py-\[12px\] {
@@ -2916,26 +2967,6 @@ video {
   padding-bottom: 8rem;
 }
 
-.py-\[7rem\] {
-  padding-top: 7rem;
-  padding-bottom: 7rem;
-}
-
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
-}
-
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[10rem\] {
-  padding-top: 10rem;
-  padding-bottom: 10rem;
-}
-
 .pb-\[12px\] {
   padding-bottom: 12px;
 }
@@ -2964,8 +2995,16 @@ video {
   padding-right: 35px;
 }
 
+.pt-\[20px\] {
+  padding-top: 20px;
+}
+
 .pt-\[2rem\] {
   padding-top: 2rem;
+}
+
+.pt-\[30px\] {
+  padding-top: 30px;
 }
 
 .pt-\[4rem\] {
@@ -3243,6 +3282,10 @@ video {
   line-height: 2rem;
 }
 
+.leading-\[50px\] {
+  line-height: 50px;
+}
+
 .leading-\[56px\] {
   line-height: 56px;
 }
@@ -3271,6 +3314,11 @@ video {
   color: rgb(25 200 151 / var(--tw-text-opacity));
 }
 
+.text-\[\#282a2c\] {
+  --tw-text-opacity: 1;
+  color: rgb(40 42 44 / var(--tw-text-opacity));
+}
+
 .text-\[\#336699\]\/\[\.35\] {
   color: rgb(51 102 153 / .35);
 }
@@ -3278,6 +3326,11 @@ video {
 .text-\[\#7c818b\] {
   --tw-text-opacity: 1;
   color: rgb(124 129 139 / var(--tw-text-opacity));
+}
+
+.text-\[\#a1a1a1\] {
+  --tw-text-opacity: 1;
+  color: rgb(161 161 161 / var(--tw-text-opacity));
 }
 
 .text-\[\#aaa\] {
@@ -3335,13 +3388,18 @@ video {
   color: rgb(20 184 166 / var(--tw-text-opacity));
 }
 
+.text-transparent {
+  color: transparent;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\] {
-  color: ;
+.text-yellow-200 {
+  --tw-text-opacity: 1;
+  color: rgb(254 240 138 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -3845,8 +3903,16 @@ video {
     margin-bottom: 60px;
   }
 
+  .sm\:h-\[44rem\] {
+    height: 44rem;
+  }
+
   .sm\:h-\[50vh\] {
     height: 50vh;
+  }
+
+  .sm\:h-\[700px\] {
+    height: 700px;
   }
 
   .sm\:w-\[100\%\] {
@@ -3908,6 +3974,11 @@ video {
     top: 8rem;
   }
 
+  .md\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .md\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -3916,6 +3987,11 @@ video {
   .md\:my-16 {
     margin-top: 4rem;
     margin-bottom: 4rem;
+  }
+
+  .md\:my-24 {
+    margin-top: 6rem;
+    margin-bottom: 6rem;
   }
 
   .md\:mb-\[15px\] {
@@ -3934,12 +4010,20 @@ video {
     margin-top: 2rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
   }
 
   .md\:hidden {
     display: none;
+  }
+
+  .md\:h-\[115vh\] {
+    height: 115vh;
   }
 
   .md\:h-\[160vh\] {
@@ -3950,12 +4034,20 @@ video {
     height: 270px;
   }
 
-  .md\:h-\[280px\] {
-    height: 280px;
-  }
-
   .md\:h-\[300px\] {
     height: 300px;
+  }
+
+  .md\:h-\[30px\] {
+    height: 30px;
+  }
+
+  .md\:h-\[350px\] {
+    height: 350px;
+  }
+
+  .md\:h-\[370px\] {
+    height: 370px;
   }
 
   .md\:h-\[50vh\] {
@@ -3976,6 +4068,10 @@ video {
 
   .md\:w-\[30\%\] {
     width: 30%;
+  }
+
+  .md\:w-\[35\%\] {
+    width: 35%;
   }
 
   .md\:w-\[45\%\] {
@@ -4002,6 +4098,18 @@ video {
     width: 90%;
   }
 
+  .md\:w-\[95\%\] {
+    width: 95%;
+  }
+
+  .md\:w-full {
+    width: 100%;
+  }
+
+  .md\:grid-cols-2 {
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
   .md\:flex-row {
     flex-direction: row;
   }
@@ -4022,20 +4130,52 @@ video {
     align-items: center;
   }
 
+  .md\:justify-start {
+    justify-content: flex-start;
+  }
+
+  .md\:justify-end {
+    justify-content: flex-end;
+  }
+
   .md\:justify-center {
     justify-content: center;
+  }
+
+  .md\:justify-between {
+    justify-content: space-between;
   }
 
   .md\:gap-10 {
     gap: 2.5rem;
   }
 
+  .md\:gap-3 {
+    gap: 0.75rem;
+  }
+
   .md\:gap-\[10px\] {
     gap: 10px;
   }
 
+  .md\:gap-\[200px\] {
+    gap: 200px;
+  }
+
   .md\:gap-\[250px\] {
     gap: 250px;
+  }
+
+  .md\:gap-\[50px\] {
+    gap: 50px;
+  }
+
+  .md\:gap-\[70px\] {
+    gap: 70px;
+  }
+
+  .md\:border-none {
+    border-style: none;
   }
 
   .md\:bg-gradient-to-l {
@@ -4108,6 +4248,16 @@ video {
     line-height: 1.75rem;
   }
 
+  .md\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .md\:font-bold {
     font-weight: 700;
   }
@@ -4127,8 +4277,21 @@ video {
     margin-right: auto;
   }
 
+  .lg\:my-\[20px\] {
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+
+  .lg\:block {
+    display: block;
+  }
+
   .lg\:flex {
     display: flex;
+  }
+
+  .lg\:hidden {
+    display: none;
   }
 
   .lg\:h-\[50vh\] {
@@ -4147,16 +4310,24 @@ video {
     height: 90vh;
   }
 
-  .lg\:w-\[130\%\] {
-    width: 130%;
+  .lg\:w-\[100\%\] {
+    width: 100%;
   }
 
   .lg\:w-\[40\%\] {
     width: 40%;
   }
 
+  .lg\:w-\[45\%\] {
+    width: 45%;
+  }
+
   .lg\:w-\[50\%\] {
     width: 50%;
+  }
+
+  .lg\:w-\[60\%\] {
+    width: 60%;
   }
 
   .lg\:w-\[65\%\] {
@@ -4187,8 +4358,28 @@ video {
     width: 100%;
   }
 
+  .lg\:grid-cols-4 {
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .lg\:flex-row {
+    flex-direction: row;
+  }
+
   .lg\:items-center {
     align-items: center;
+  }
+
+  .lg\:gap-11 {
+    gap: 2.75rem;
+  }
+
+  .lg\:gap-\[400px\] {
+    gap: 400px;
+  }
+
+  .lg\:gap-\[50px\] {
+    gap: 50px;
   }
 
   .lg\:px-10 {
@@ -4225,6 +4416,11 @@ video {
     text-align: left;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
@@ -4238,6 +4434,11 @@ video {
   .lg\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .lg\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 
   .lg\:text-xl {
